--- a/litterclear/Base.lproj/Main.storyboard
+++ b/litterclear/Base.lproj/Main.storyboard
@@ -339,6 +339,7 @@
                         <outlet property="reportAnonymousSwitch" destination="JUq-oZ-Vts" id="J2o-Ow-ovi"/>
                         <outlet property="screenNameLabel" destination="egy-dL-Oue" id="dS8-Ai-3tK"/>
                         <outlet property="statusChangeNotificationSwitch" destination="hdP-UW-PMb" id="Vno-fr-RnW"/>
+                        <segue destination="i7m-VT-bvN" kind="show" identifier="showReportList" id="n34-Sh-RHD"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="tMH-OL-Tge" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -565,7 +566,7 @@
                                     <outlet property="reportImageView" destination="CPA-2H-n2M" id="lFs-4N-92h"/>
                                     <outlet property="statusLabel" destination="jKV-VQ-Ggl" id="ixR-9P-Hw2"/>
                                     <outlet property="timeLabel" destination="qjk-dz-YGa" id="ozJ-ox-ghs"/>
-                                    <segue destination="QVk-1W-gCI" kind="show" identifier="ShowReportDetail" id="epa-Nw-4Gh"/>
+                                    <segue destination="QVk-1W-gCI" kind="show" identifier="ShowReportDetail" id="SQa-R1-kR3"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -578,9 +579,9 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="piZ-rL-hil" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="777" y="788"/>
+            <point key="canvasLocation" x="1716" y="787.55622188905556"/>
         </scene>
-        <!--Report Detail View Controller-->
+        <!--Report-->
         <scene sceneID="lYc-Nv-2h7">
             <objects>
                 <viewController id="QVk-1W-gCI" customClass="ReportDetailViewController" customModule="litterclear" customModuleProvider="target" sceneMemberID="viewController">
@@ -592,35 +593,35 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="time" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="OCq-VI-zTL">
-                                <rect key="frame" x="16" y="20" width="330" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="time" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="OCq-VI-zTL">
+                                <rect key="frame" x="0.0" y="60" width="375" height="30"/>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="8hm-s8-LCH">
-                                <rect key="frame" x="0.0" y="75" width="375" height="246"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="8hm-s8-LCH">
+                                <rect key="frame" x="0.0" y="100" width="375" height="300"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="300" id="uDr-m2-kxP"/>
+                                </constraints>
                             </imageView>
-                            <stackView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="pNY-Ic-eOS">
-                                <rect key="frame" x="16" y="329" width="240" height="248"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="pNY-Ic-eOS">
+                                <rect key="frame" x="16" y="419" width="343" height="248"/>
                                 <subviews>
                                     <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" text="address" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="9UM-R1-9SC">
-                                        <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="343" height="128"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                     </textView>
                                     <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="description" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="zSQ-x2-5VZ">
-                                        <rect key="frame" x="0.0" y="128" width="240" height="30"/>
+                                        <rect key="frame" x="0.0" y="128" width="343" height="30"/>
                                         <nil key="textColor"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
                                     <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="IvX-kx-c4S">
-                                        <rect key="frame" x="0.0" y="158" width="240" height="30"/>
+                                        <rect key="frame" x="0.0" y="158" width="343" height="30"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Size" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iKe-ub-qh2">
                                                 <rect key="frame" x="0.0" y="0.0" width="32.5" height="30"/>
@@ -629,7 +630,7 @@
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Aek-yV-vxC">
-                                                <rect key="frame" x="32.5" y="0.0" width="207.5" height="30"/>
+                                                <rect key="frame" x="32.5" y="0.0" width="310.5" height="30"/>
                                                 <nil key="textColor"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                 <textInputTraits key="textInputTraits"/>
@@ -637,7 +638,7 @@
                                         </subviews>
                                     </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="aNb-Se-yp2">
-                                        <rect key="frame" x="0.0" y="188" width="240" height="30"/>
+                                        <rect key="frame" x="0.0" y="188" width="343" height="30"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Severity" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qKN-N9-E6y">
                                                 <rect key="frame" x="0.0" y="0.0" width="62.5" height="30"/>
@@ -646,7 +647,7 @@
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="DBe-RQ-pvx">
-                                                <rect key="frame" x="62.5" y="0.0" width="177.5" height="30"/>
+                                                <rect key="frame" x="62.5" y="0.0" width="280.5" height="30"/>
                                                 <nil key="textColor"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                 <textInputTraits key="textInputTraits"/>
@@ -654,7 +655,7 @@
                                         </subviews>
                                     </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="B0G-3r-ajb">
-                                        <rect key="frame" x="0.0" y="218" width="240" height="30"/>
+                                        <rect key="frame" x="0.0" y="218" width="343" height="30"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Status" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BLL-Zg-npc">
                                                 <rect key="frame" x="0.0" y="0.0" width="49.5" height="30"/>
@@ -663,7 +664,7 @@
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="gMu-d7-AXv">
-                                                <rect key="frame" x="49.5" y="0.0" width="190.5" height="30"/>
+                                                <rect key="frame" x="49.5" y="0.0" width="293.5" height="30"/>
                                                 <nil key="textColor"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                 <textInputTraits key="textInputTraits"/>
@@ -674,7 +675,32 @@
                             </stackView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="8hm-s8-LCH" firstAttribute="top" secondItem="OCq-VI-zTL" secondAttribute="bottom" constant="10" id="2MO-K4-iiZ"/>
+                            <constraint firstItem="8hm-s8-LCH" firstAttribute="leading" secondItem="XOf-9k-55A" secondAttribute="leading" id="E0L-qb-SUL"/>
+                            <constraint firstItem="pNY-Ic-eOS" firstAttribute="top" secondItem="OCq-VI-zTL" secondAttribute="bottom" constant="329" id="Fmc-fr-H1m"/>
+                            <constraint firstItem="OCq-VI-zTL" firstAttribute="leading" secondItem="XOf-9k-55A" secondAttribute="leading" id="GdN-VL-95g"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="pNY-Ic-eOS" secondAttribute="trailing" id="HnN-ft-Xvq"/>
+                            <constraint firstAttribute="trailing" secondItem="8hm-s8-LCH" secondAttribute="trailing" id="L8O-uO-6YA"/>
+                            <constraint firstAttribute="trailing" secondItem="OCq-VI-zTL" secondAttribute="trailing" id="S4v-w3-N0k"/>
+                            <constraint firstItem="OCq-VI-zTL" firstAttribute="top" secondItem="XOf-9k-55A" secondAttribute="top" constant="60" id="WoE-ck-cEX"/>
+                            <constraint firstItem="pNY-Ic-eOS" firstAttribute="leading" secondItem="XOf-9k-55A" secondAttribute="leadingMargin" id="v7O-ot-PxI"/>
+                        </constraints>
                     </view>
+                    <toolbarItems/>
+                    <navigationItem key="navigationItem" title="Report" id="bPi-Bq-k6Z">
+                        <barButtonItem key="leftBarButtonItem" title="Back" id="Ohn-wR-0Za">
+                            <connections>
+                                <action selector="goBackToReportList:" destination="QVk-1W-gCI" id="Byt-1w-PlO"/>
+                            </connections>
+                        </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" title="Update" id="Ef5-rL-6GS">
+                            <connections>
+                                <segue destination="rMC-JO-rSE" kind="unwind" unwindAction="unwindToReportListWithSender:" id="jH7-5f-BuK"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
                         <outlet property="addressTextView" destination="9UM-R1-9SC" id="aTP-Ua-rFB"/>
                         <outlet property="descriptionTextField" destination="zSQ-x2-5VZ" id="S6m-6c-dwg"/>
@@ -686,8 +712,45 @@
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="9nc-Dv-kz8" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="rMC-JO-rSE" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="1733.5999999999999" y="787.55622188905556"/>
+            <point key="canvasLocation" x="3826" y="853"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="xUg-vU-ZBR">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="i7m-VT-bvN" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" misplaced="YES" id="mt7-Ia-m6R">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="pHW-Xw-wU7" kind="relationship" relationship="rootViewController" id="mzp-5Y-k00"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="f0f-OS-iMp" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="776.79999999999995" y="787.55622188905556"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="0eV-Jx-3Na">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="AIP-p5-03R" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="yHj-jd-PRG">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="QVk-1W-gCI" kind="relationship" relationship="rootViewController" id="BFI-hw-axI"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="DVt-eb-kLL" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2695" y="1345"/>
         </scene>
     </scenes>
     <resources>
@@ -702,4 +765,7 @@
         <image name="ic_send_white" width="24" height="24"/>
         <image name="profile-image" width="600" height="600"/>
     </resources>
+    <inferredMetricsTieBreakers>
+        <segue reference="SQa-R1-kR3"/>
+    </inferredMetricsTieBreakers>
 </document>
